--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ permissions:
   pull-requests: read
 
 jobs:
-  check-links:
+  run-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
