--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,4 +22,10 @@ jobs:
           python-version: '3.10' 
           cache: 'pip' # caching pip dependencies
       
-      - run: pip install -r requirements.txt
+      - run: |
+          pip install -r requirements.txt
+          pip install pylint
+
+      - name: Analysing the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
