--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,3 +29,6 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py')
+
+      - name: Python security check using Bandit
+        uses: Joel-hanson/bandit-report-artifacts@V1
