--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,9 +26,9 @@ jobs:
           pip install -r requirements.txt
           pip install pylint
 
-      - name: Analysing the code with pylint
-        run: |
-          pylint $(git ls-files '*.py')
+      # - name: Analysing the code with pylint
+      #   run: |
+      #     pylint $(git ls-files '*.py')
 
       - name: Python security check 
         uses: Joel-hanson/bandit-report-artifacts@V1
