--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,6 +33,11 @@ jobs:
       - name: Python security check 
         uses: Joel-hanson/bandit-report-artifacts@V1
 
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          tags: pythondemoapp:latest
+
       - uses: akhileshns/heroku-deploy@v3.12.14
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
